Add garbadge collection to prevent memory leak

--- a/entrack/inference_t.ipynb
+++ b/entrack/inference_t.ipynb
@@ -17,6 +17,7 @@
     "\n",
     "import yaml\n",
     "import datetime\n",
+    "import gc\n",
     "\n",
     "import nipy as ni\n",
     "import nibabel as nib\n",
@@ -220,8 +221,11 @@
     "            100*(1-len(fiber_idx)/len(seeds)), len(vin) / (time() - t0)),\n",
     "            end=\"\\r\"\n",
     "        )\n",
+    "        \n",
     "        if len(fiber_idx) == 0:\n",
     "            break\n",
+    "            \n",
+    "        gc.collect()\n",
     "    \n",
     "    # Include unfinished fibers:\n",
     "    \n",
@@ -271,26 +275,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = dict(\n",
     "    subject=\"ismrm_gt\",\n",
-    "    model_dir=\"../models/entrack_conditional/96475e3d3ee3ab52df04aec6ba4972ca\",\n",
+    "    model_dir=\"../models/entrack_conditional/f57290355caf38c41d6aeca1c7dc2091\",\n",
     "    dwi_path=\"fod_norm_125.nii.gz\",\n",
     "    prior=\"tensor_V1_125.nii.gz\",\n",
     "    seed_path=\"../scoring/scoring_data/seeds/seeds_from_fibers_100.trk\",\n",
-    "    terminator=[\"wm_mask_125.nii.gz\", 0.1],\n",
+    "    terminator=[\"wm_mask_125.nii.gz\", 0.2],\n",
     "    predict_fn=\"mean\",\n",
-    "    step_size=0.5,\n",
-    "    max_steps=100\n",
+    "    step_size=0.25,\n",
+    "    max_steps=400\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -299,30 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading DWI...\n",
-      "Loading Model...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W1023 09:40:00.214016 140020152858368 deprecation.py:323] From /local/home/vwegmayr/miniconda2/envs/thesis/lib/python3.6/site-packages/tensorflow_probability/python/distributions/von_mises_fisher.py:312: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Seeds...\n",
-      "Initialize Fibers...\n",
-      "Start Iteration...\n",
-      "Iter  100/100, finished 697896/801732 ( 87%) of all seeds with  56689 steps/sec\n",
-      "Saving ../subjects/ismrm_gt/predicted_fibers/cfc79dd9683c0ab273146144039e7db9/fibers.trk\n",
-      "Saving ../subjects/ismrm_gt/predicted_fibers/cfc79dd9683c0ab273146144039e7db9/config.yml\n"
+      "Loading DWI...\n"
      ]
     }
    ],
