--- a/entrack/inference_t.ipynb
+++ b/entrack/inference_t.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "    block_size = int(np.cbrt(input_shape / dwi.shape[-1]))\n",
     "    \n",
     "    def xyz2ijk(coords, snap=False, shift=False):\n",
-    "        ijk = dwi_affi2.dot(coords.T).T + 0.5\n",
+    "        ijk = dwi_affi2.dot(coords.T).T\n",
     "        if snap:\n",
     "            ijk = np.round(ijk).astype(int)\n",
     "        return ijk\n",
@@ -106,7 +106,7 @@
     "                scalar_img = nib.load(os.path.join(subject_dir, config[\"terminator\"][0]))\n",
     "                self.scalar = scalar_img.get_data()\n",
     "                affi = np.linalg.inv(scalar_img.affine)\n",
-    "                self.xyz2ijk = lambda xyz: np.round(affi.dot(xyz.T).T + 0.5).astype(int)\n",
+    "                self.xyz2ijk = lambda xyz: np.round(affi.dot(xyz.T).T).astype(int)\n",
     "            else:\n",
     "                raise NotImplementedError # TODO: Implement termination model\n",
     "            self.threshold = config[\"terminator\"][1]\n",
@@ -135,7 +135,7 @@
     "                peak_img = nib.load(os.path.join(subject_dir, config[\"prior\"]))\n",
     "                self.peak = peak_img.get_data()\n",
     "                affi = np.linalg.inv(peak_img.affine)\n",
-    "                self.xyz2ijk = lambda xyz: np.round(affi.dot(xyz.T).T + 0.5).astype(int)\n",
+    "                self.xyz2ijk = lambda xyz: np.round(affi.dot(xyz.T).T).astype(int)\n",
     "            elif \".h5\" in config[\"prior\"]:\n",
     "                raise NotImplementedError # TODO: Implement prior model\n",
     "                \n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,8 +284,8 @@
     "    model_dir=\"../models/entrack_conditional/f57290355caf38c41d6aeca1c7dc2091\",\n",
     "    dwi_path=\"fod_norm_125.nii.gz\",\n",
     "    prior=\"tensor_V1_125.nii.gz\",\n",
-    "    seed_path=\"../scoring/scoring_data/seeds/seeds_from_fibers_100.trk\",\n",
-    "    terminator=[\"wm_mask_125.nii.gz\", 0.2],\n",
+    "    seed_path=\"../scoring/scoring_data/seeds/seeds_from_wm_100.trk\",\n",
+    "    terminator=[\"wm_mask_125.nii.gz\", 0.1],\n",
     "    predict_fn=\"mean\",\n",
     "    step_size=0.25,\n",
     "    max_steps=400\n",
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -303,328 +303,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading DWI...\n"
+      "Loading DWI...\n",
+      "Loading Model...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W1024 08:29:26.110945 140356650682112 deprecation.py:323] From /local/home/vwegmayr/miniconda2/envs/thesis/lib/python3.6/site-packages/tensorflow_probability/python/distributions/von_mises_fisher.py:312: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Seeds...\n",
+      "Initialize Fibers...\n",
+      "Start Iteration...\n",
+      "Iter  259/400, finished 476493/534844 ( 89%) of all seeds with   4487 steps/sec\r"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-7aa7bb5546f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtractogram\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-2-4d00d91850d0>\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(config)\u001b[0m\n\u001b[1;32m    160\u001b[0m                 \u001b[0mthis_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxyz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    161\u001b[0m                 \u001b[0mother_end\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfibers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mgidx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 162\u001b[0;31m                 \u001b[0mmerged_fiber\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthis_end\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother_end\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# stitch ends together\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    163\u001b[0m                 \u001b[0mfibers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mgidx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmerged_fiber\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda2/envs/thesis/lib/python3.6/site-packages/numpy/core/shape_base.py\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(tup)\u001b[0m\n\u001b[1;32m    281\u001b[0m     \"\"\"\n\u001b[1;32m    282\u001b[0m     \u001b[0m_warn_for_nonsequence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 283\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_nx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0matleast_2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_m\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtup\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    285\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "tractogram = predict(config)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vec_file = nib.load(\"../subjects/ismrm_gt/tensor.nii.gz\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6146262002743484"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.isnan(vec_file.get_data()).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dwi = nib.load(\"../subjects/ismrm_gt/data.nii.gz\").get_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seed_file = nib.streamlines.load(\"../subjects/ismrm_rpe/seeds/2f67d5e294c879f5883a99d04e47e38d/seeds.trk\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wm_file = nib.load(\"../scoring/scoring_data/masks/wm_125.nii.gz\")\n",
-    "wm_img = wm_file.get_data()\n",
-    "wm_affi = np.linalg.inv(wm_file.affine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inwm=0\n",
-    "for seed in seed_file.tractogram.streamlines:\n",
-    "    ijk = np.round(affi.dot(np.hstack([seed[0], [1]]))[:3] + 0.5).astype(int)\n",
-    "    inwm += wm_img[ijk[0],ijk[1],ijk[2]] >= 0.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9768002275074463"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inwm / len(seed_file.tractogram.streamlines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ingm=0\n",
-    "for seed in seed_file.tractogram.streamlines:\n",
-    "    ijk = np.round(affi.dot(np.hstack([seed[0], [1]]))[:3] + 0.5).astype(int)\n",
-    "    ingm += wm_img[ijk[0],ijk[1],ijk[2]] < 0.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "65351"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ingm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.02319977249255362"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ingm / len(seed_file.tractogram.streamlines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "brain_file = nib.load(\"../subjects/ismrm_rpe/dwi_brain_mask_125.nii.gz\")\n",
-    "brain_img = brain_file.get_data()\n",
-    "affi = np.linalg.inv(brain_file.affine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out=0\n",
-    "for seed in seed_file.tractogram.streamlines:\n",
-    "    ijk = np.round(affi.dot(np.hstack([seed[0], [1]]))[:3]+0.5).astype(int)\n",
-    "    out += brain_img[ijk[0],ijk[1],ijk[2]] < 0.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.06702239651155249"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out / len(seed_file.tractogram.streamlines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "roi_file = nib.load(\"../scoring/scoring_data/masks/all_rois_125.nii.gz\")\n",
-    "roi_img = roi_file.get_data()\n",
-    "roi_affi = np.linalg.inv(roi_file.affine)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9917722897896936"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((roi_img > 0.1)*(wm_img > 0.1)).sum() / (roi_img > 0.1).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9963218803265452"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((roi_img > 0.1)*(brain_img > 0.1)).sum() / (roi_img > 0.1).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9987547770938816"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "((wm_img > 0.1)*(brain_img > 0.1)).sum() / (wm_img > 0.1).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.758534"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(wm_img[roi_img > 0.1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inroi=0\n",
-    "for seed in seed_file.tractogram.streamlines:\n",
-    "    ijk = np.round(roi_affi.dot(np.hstack([seed[0], [1]]))[:3] + 0.5).astype(int)\n",
-    "    inroi += roi_img[ijk[0],ijk[1],ijk[2]] > 0.05"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9604206892078649"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "inroi / len(seed_file.tractogram.streamlines)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
