Add model func from old paper

--- a/entrack/training_conditional_t.ipynb
+++ b/entrack/training_conditional_t.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,15 +108,17 @@
     "\n",
     "    def model_fn(inputs):\n",
     "\n",
-    "        x = Dense(1024, activation=\"relu\")(inputs)\n",
+    "        x = Dense(2048, activation=\"relu\")(inputs)\n",
+    "        x = Dense(2048, activation=\"relu\")(x)\n",
+    "        x = Dense(2048, activation=\"relu\")(x)\n",
+    "        \n",
+    "        # x = Dropout(0.1)(x)\n",
     "\n",
-    "        x = Dense(1024, activation=\"relu\")(x)\n",
-    "\n",
-    "        mu = Dense(512, activation=\"relu\")(x)\n",
+    "        mu = Dense(1024, activation=\"relu\")(x)\n",
     "        mu = Dense(3, activation=\"linear\")(mu)\n",
     "        mu = Lambda(lambda t: K.l2_normalize(t, axis=-1), name=\"mu\")(mu)\n",
     "\n",
-    "        kappa = Dense(512, activation=\"relu\")(x)\n",
+    "        kappa = Dense(1024, activation=\"relu\")(x)\n",
     "        kappa = Dense(1, activation=\"relu\")(kappa)\n",
     "        kappa = Lambda(lambda t: K.squeeze(t, 1), name=\"kappa\")(kappa) \n",
     "        \n",
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,35 +197,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = dict(\n",
     "    model_name=\"entrack_conditional\",\n",
-    "    train_dir=\"../subjects/992774/samples/2392afe9c0d78631915fa44f37a48d90\",\n",
+    "    train_dir=\"../subjects/992774/samples/7265ad1c1c59d34170b766620efb402c\",\n",
     "    #eval_dir=\"../subjects/992774/samples/0c7f800138a28ef0840333930880d857\",\n",
     "    max_n_samples=np.inf,\n",
     "    batch_size = 256,\n",
-    "    epochs = 10,\n",
+    "    epochs = 50,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W1021 19:00:22.246206 140129666033408 deprecation.py:323] From /local/home/vwegmayr/miniconda2/envs/thesis/lib/python3.6/site-packages/tensorflow_probability/python/distributions/von_mises_fisher.py:312: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -234,51 +226,133 @@
       "==================================================================================================\n",
       "inputs (InputLayer)             [(None, 408)]        0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "dense (Dense)                   (None, 1024)         418816      inputs[0][0]                     \n",
+      "dense_14 (Dense)                (None, 2048)         837632      inputs[0][0]                     \n",
       "__________________________________________________________________________________________________\n",
-      "dense_1 (Dense)                 (None, 1024)         1049600     dense[0][0]                      \n",
+      "dense_15 (Dense)                (None, 2048)         4196352     dense_14[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                 (None, 512)          524800      dense_1[0][0]                    \n",
+      "dense_16 (Dense)                (None, 2048)         4196352     dense_15[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "dense_4 (Dense)                 (None, 512)          524800      dense_1[0][0]                    \n",
+      "dense_17 (Dense)                (None, 1024)         2098176     dense_16[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                 (None, 3)            1539        dense_2[0][0]                    \n",
+      "dense_19 (Dense)                (None, 1024)         2098176     dense_16[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "dense_5 (Dense)                 (None, 1)            513         dense_4[0][0]                    \n",
+      "dense_18 (Dense)                (None, 3)            3075        dense_17[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "mu (Lambda)                     (None, 3)            0           dense_3[0][0]                    \n",
+      "dense_20 (Dense)                (None, 1)            1025        dense_19[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "kappa (Lambda)                  (None,)              0           dense_5[0][0]                    \n",
+      "mu (Lambda)                     (None, 3)            0           dense_18[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "distribution_lambda (Distributi ((None, 3), (None, 3 0           mu[0][0]                         \n",
+      "kappa (Lambda)                  (None,)              0           dense_20[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "distribution_lambda_2 (Distribu ((None, 3), (None, 3 0           mu[0][0]                         \n",
       "                                                                 kappa[0][0]                      \n",
       "==================================================================================================\n",
-      "Total params: 2,520,068\n",
-      "Trainable params: 2,520,068\n",
+      "Total params: 13,430,788\n",
+      "Trainable params: 13,430,788\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n",
-      "Epoch 1/10\n",
-      "39/39 [==============================] - 2s 62ms/step - loss: 1.1944\n",
-      "Epoch 2/10\n",
-      "39/39 [==============================] - 1s 27ms/step - loss: -0.7369\n",
-      "Epoch 3/10\n",
-      "39/39 [==============================] - 1s 28ms/step - loss: -1.0005\n",
-      "Epoch 4/10\n",
-      "39/39 [==============================] - 1s 26ms/step - loss: -0.9059\n",
-      "Epoch 5/10\n",
-      "39/39 [==============================] - 1s 26ms/step - loss: -1.2239\n",
-      "Epoch 6/10\n",
-      "39/39 [==============================] - 1s 25ms/step - loss: -1.2550\n",
-      "Epoch 7/10\n",
-      "39/39 [==============================] - 1s 28ms/step - loss: -1.2310\n",
-      "Epoch 8/10\n",
-      "39/39 [==============================] - 1s 29ms/step - loss: -1.0952\n",
-      "Epoch 9/10\n",
-      "39/39 [==============================] - 1s 22ms/step - loss: -1.3581\n",
-      "Epoch 10/10\n",
-      "39/39 [==============================] - 1s 31ms/step - loss: -1.4778\n",
-      "Saving ../models/entrack_conditional/789acc8e14db470e0696d17b76b9a0a6/config.yml\n",
-      "Saving ../models/entrack_conditional/789acc8e14db470e0696d17b76b9a0a6/model.h5\n"
+      "Epoch 1/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -1.1698\n",
+      "Epoch 2/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -1.4388\n",
+      "Epoch 3/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -1.5383\n",
+      "Epoch 4/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -1.5990\n",
+      "Epoch 5/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -1.6505\n",
+      "Epoch 6/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -1.6921\n",
+      "Epoch 7/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -1.7296\n",
+      "Epoch 8/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -1.7664\n",
+      "Epoch 9/50\n",
+      "1953/1953 [==============================] - 28s 15ms/step - loss: -1.7942\n",
+      "Epoch 10/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -1.8257\n",
+      "Epoch 11/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -1.8496\n",
+      "Epoch 12/50\n",
+      "1953/1953 [==============================] - 28s 15ms/step - loss: -1.8765\n",
+      "Epoch 13/50\n",
+      "1953/1953 [==============================] - 28s 15ms/step - loss: -1.9041\n",
+      "Epoch 14/50\n",
+      "1953/1953 [==============================] - 28s 15ms/step - loss: -1.9285\n",
+      "Epoch 15/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -1.9502\n",
+      "Epoch 16/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -1.9782\n",
+      "Epoch 17/50\n",
+      "1953/1953 [==============================] - 27s 14ms/step - loss: -2.0025\n",
+      "Epoch 18/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.0265\n",
+      "Epoch 19/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.0482\n",
+      "Epoch 20/50\n",
+      "1953/1953 [==============================] - 26s 14ms/step - loss: -2.0686\n",
+      "Epoch 21/50\n",
+      "1953/1953 [==============================] - 27s 14ms/step - loss: -2.1008\n",
+      "Epoch 22/50\n",
+      "1953/1953 [==============================] - 27s 14ms/step - loss: -2.1206\n",
+      "Epoch 23/50\n",
+      "1953/1953 [==============================] - 27s 14ms/step - loss: -2.1510\n",
+      "Epoch 24/50\n",
+      "1953/1953 [==============================] - 27s 14ms/step - loss: -2.1761\n",
+      "Epoch 25/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.1987\n",
+      "Epoch 26/50\n",
+      "1953/1953 [==============================] - 27s 14ms/step - loss: -2.2239\n",
+      "Epoch 27/50\n",
+      "1953/1953 [==============================] - 27s 14ms/step - loss: -2.2512\n",
+      "Epoch 28/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.2789\n",
+      "Epoch 29/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.3047\n",
+      "Epoch 30/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.3308\n",
+      "Epoch 31/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.3578\n",
+      "Epoch 32/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.3881\n",
+      "Epoch 33/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.4161\n",
+      "Epoch 34/50\n",
+      "1953/1953 [==============================] - 28s 15ms/step - loss: -2.4443\n",
+      "Epoch 35/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -2.4764\n",
+      "Epoch 36/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -2.5015\n",
+      "Epoch 37/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -2.5305\n",
+      "Epoch 38/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -2.5637\n",
+      "Epoch 39/50\n",
+      "1953/1953 [==============================] - 27s 14ms/step - loss: -2.5935\n",
+      "Epoch 40/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.6233\n",
+      "Epoch 41/50\n",
+      "1953/1953 [==============================] - 27s 14ms/step - loss: -2.6509\n",
+      "Epoch 42/50\n",
+      "1953/1953 [==============================] - 27s 14ms/step - loss: -2.6867\n",
+      "Epoch 43/50\n",
+      "1953/1953 [==============================] - 28s 14ms/step - loss: -2.7171\n",
+      "Epoch 44/50\n",
+      "1953/1953 [==============================] - 28s 15ms/step - loss: -2.7451\n",
+      "Epoch 45/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -2.7761\n",
+      "Epoch 46/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -2.8048\n",
+      "Epoch 47/50\n",
+      "1953/1953 [==============================] - 30s 15ms/step - loss: -2.8369\n",
+      "Epoch 48/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -2.8692\n",
+      "Epoch 49/50\n",
+      "1953/1953 [==============================] - 29s 15ms/step - loss: -2.8970\n",
+      "Epoch 50/50\n",
+      "1953/1953 [==============================] - 28s 15ms/step - loss: -2.9267\n",
+      "Saving ../models/entrack_conditional/f57290355caf38c41d6aeca1c7dc2091/config.yml\n",
+      "Saving ../models/entrack_conditional/f57290355caf38c41d6aeca1c7dc2091/model.h5\n"
      ]
     }
    ],
@@ -296,21 +370,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
